--- a/.github/workflows/update-rankings.yml
+++ b/.github/workflows/update-rankings.yml
@@ -33,7 +33,7 @@ jobs:
 
             # --- Build full URLs from slugs ---
             LEAGUE_URL="https://www.bbc.co.uk/sport/football/${LEAGUE_SLUG}/table"
-            FIXTURES_URL="https://www.bbc.co.uk/sport/football/${LEAGUE_SLUG}/fixtures"
+            FIXTURES_URL="https://www.bbc.co.uk/sport/football/${LEAGUE_SLUG}/scores-fixtures"
 
             echo "Constructed League URL: $LEAGUE_URL"
             echo "Constructed Fixtures URL: $FIXTURES_URL"
