--- a/.github/workflows/update-BBC-data.yml
+++ b/.github/workflows/update-BBC-data.yml
@@ -101,7 +101,6 @@ jobs:
               
               soup = BeautifulSoup(html_content, 'html.parser')
               
-              # --- CRITICAL FIX: Use the stable data-testid attribute ---
               table = soup.find('table', {'data-testid': 'football-table'})
               
               if not table:
@@ -115,38 +114,27 @@ jobs:
                   return []
 
               for row in tbody.find_all('tr'):
-                  # Target all cells including the rank/team header cell (th/td)
                   cells = row.find_all(['th', 'td'])
                   
-                  # We expect 10 main columns (Rank, Team, P, W, D, L, F, A, GD, Pts) + 1 for Form
                   if len(cells) < 10: 
-                      print(f"⚠️ Skipping row with {len(cells)} cells (expected at least 10).")
                       continue
                       
                   try:
-                      # Ranks are in the first cell, inside a span
-                      rank_span = cells[0].find('span', class_=lambda c: c and 'Rank' in c)
-                      rank = int(rank_span.get_text(strip=True)) if rank_span else int(cells[0].find('span', class_=lambda c: c and 'Rank' in c).get_text(strip=True))
+                      rank = int(cells[0].find('span', class_=lambda c: c and 'Rank' in c).get_text(strip=True))
 
-                      # Team Name is linked/wrapped, grab the visible name
-                      team_name_link = cells[0].find('a', class_=lambda c: c and 'TeamNameLink' in c)
-                      team_name_span = team_name_link.find('span', class_='visually-hidden') if team_name_link else None
+                      team_name_span = cells[0].find('span', class_='visually-hidden')
+                      team_name = team_name_span.get_text(strip=True) if team_name_span else "Unknown Team"
                       
-                      # The visually hidden span contains the full team name: "Stevenage"
-                      team_name = team_name_span.get_text(strip=True) if team_name_span else cells[0].get_text(strip=True)
-                      
-                      # Played is in column 2, Won in 3, Drawn in 4, etc. (relative index from 1)
                       played = int(cells[1].get_text(strip=True))
                       won = int(cells[2].get_text(strip=True))
                       drawn = int(cells[3].get_text(strip=True))
                       lost = int(cells[4].get_text(strip=True))
+                      # --- ADDED THESE TWO LINES ---
                       goals_for = int(cells[5].get_text(strip=True))
                       goals_against = int(cells[6].get_text(strip=True))
+                      # ---------------------------
                       goal_diff = int(cells[7].get_text(strip=True))
                       points = int(cells[8].get_text(strip=True))
-                      
-                      # The name 'Cardiff City' is what we want, not the short 'Cardiff' slug.
-                      team_name = team_name.replace('AFC Wimbledon', 'AFC Wimbledon') # Correct name from visually-hidden span
 
                       team_entry = {
                           'rank': rank,
@@ -158,9 +146,9 @@ jobs:
                               'win': won,
                               'draw': drawn,
                               'lose': lost,
-                              'goals': { # Re-add for older front-ends that might expect it
-                                'for': goals_for,
-                                'against': goals_against,
+                              'goals': {
+                                  'for': goals_for,
+                                  'against': goals_against,
                               }
                           },
                           'highlight': True if TEAM_NAME and TEAM_NAME.lower().replace('-', ' ') in team_name.lower() else False,
@@ -168,7 +156,7 @@ jobs:
                       }
                       standings_data.append(team_entry)
                   except Exception as e:
-                      print(f'⚠️ Skipping row due to parsing error: {e}. Row data inspection is recommended.')
+                      print(f'⚠️ Skipping row due to parsing error: {e}.')
                       continue
                       
               print(f"✅ Parsed {len(standings_data)} teams from the standings table.")
